<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Shorty</string>

  <string name="info">
    <b>Create a shortcut for Intent Radio using the fields and buttons
    below.</b>
  </string>

  <string name="help_text">
    <b>Shorty</b>\n
    <b>Generate shortcuts</b>
    \n\n
    The display shows fields for the name and url of the radio
    station. Fill in the fields and touch the <b>Create</b> button to
    create the shortcut. The <b>Cancel</b> button will close the
    display. The <b>Lookup</b> button on the toolbar will open the
    Lookup display.
    \n\n
    <b>Look up stations</b>
    \n
    The lookup display shows the same fields which may be filled in by
    selecting an item on the list or using the keyboard. The
    <b>Add</b> button will add an entry. The <b>Remove</b> button will
    remove the selected entry. The <b>Select</b> button will close the
    display and return. The toolbar buttons may be used to play, stop,
    pause or restart the selected station on <b>Intent Radio</b>
    directly.
    \n\n
    <b>Save and Restore</b>
    \n
    The <b>Save</b> and <b>Restore</b> items on the menu may be used
    to save and restore the current list of stations. The list
    location is <i>Shorty/entries.json</i>. This folder is accessible
    from a file manager or a connected PC. The list is in JSON format
    (<i>http://json.org</i>). It may be edited with a text editor.
  </string>

  <string name="lookup_info">
    <b>Add and remove stations from the list using the buttons below.</b>
  </string>

  <string name="not_installed">
    Intent Radio not installed\n Please install IntentRadio
  </string>

  <string name="no_write">
    "Can't write to storage"
  </string>

  <string name="no_read">
    "Can't read file from storage"
  </string>

  <string name="read_error">
    "File read error"
  </string>

  <string name="version">Shorty version %s</string>
  <string name="copyright">Copyright \u00A9 2015 Bill Farmer</string>
  <string name="licence">Licence: GNU GPLv3</string>

  <string name="name">Station name</string>
  <string name="url">Station url</string>

  <string name="default_name">BBC Radio 4</string>
  <string name="default_url">http://www.listenlive.eu/bbcradio4.m3u</string>

  <string name="cancel">Cancel</string>
  <string name="create">Create</string>

  <string name="play">Play</string>
  <string name="stop">Stop</string>
  <string name="pause">Pause</string>
  <string name="restart">Restart</string>
  <string name="save">Save</string>
  <string name="restore">Restore</string>

  <string name="add">"  Add  "</string>
  <string name="remove">Remove</string>
  <string name="select">Select</string>

  <string name="lookup">Lookup</string>
  <string name="about">About</string>
  <string name="help">Help</string>
  <string name="settings">Settings</string>

  <string name="data_saved">%d entries saved</string>
  <string name="data_restored">%d entries restored</string>

</resources>
