<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="16dp"
      android:textSize="18sp"
      android:text="@string/info" />

  <RadioGroup
      android:id="@+id/group"
      android:orientation="horizontal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:layout_gravity="center_horizontal">

    <RadioButton
	android:id="@+id/play"
	android:checked="true"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/play" />

    <RadioButton
	android:id="@+id/stop"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/stop" />

    <RadioButton
	android:id="@+id/pause"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/pause" />

    <RadioButton
	android:id="@+id/restart"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/restart" />

  </RadioGroup>

  <EditText
      android:id="@+id/name"
      android:inputType="textCapWords"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:hint="@string/name" />

  <EditText
      android:id="@+id/url"
      android:inputType="textUri"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:hint="@string/url" />

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_gravity="center_horizontal">

    <Button
	android:id="@+id/cancel"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/cancel" />

    <Button
	android:id="@+id/create"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/create" />

  </LinearLayout>
</LinearLayout>
